--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,12 +43,12 @@ jobs:
       #   uses: actions/setup-node@v4
       #   with:
       #     node-version: ${{ env.NODE_VERSION }}
-      # - name: Setup Pages
-      #   id: pages
-      #   uses: actions/configure-pages@v5
-      # - name: Create directory for user-specific executable files
-      #   run: |
-      #     mkdir -p "${HOME}/.local"
+      - name: Setup Pages
+        id: pages
+        uses: actions/configure-pages@v5
+      - name: Create directory for user-specific executable files
+        run: |
+          mkdir -p "${HOME}/.local"
       # - name: Install Dart Sass
       #   run: |
       #     curl -sLJO "https://github.com/sass/dart-sass/releases/download/${DART_SASS_VERSION}/dart-sass-${DART_SASS_VERSION}-linux-x64.tar.gz"
