--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://luandadantas.me"
+baseURL = "luandadantas.github.io"
 languageCode = "en-us"
 defaultContentLanguage = "pt-br"
 title = "Luanda Dantas"
